# aro-net

./: .gitignore  CMakeLists.txt  README.md  asdf_preprocess.py  compile.sh  convert.py  convert_folder.py  convert_mash.py  convert_model.py  convert_noise_mash.py  demo.py  detect.py  detect_aro.py  detect_mash.py  dev_setup.sh  flask_server.py  gen_aro.py  gen_mash.py  gradio_server.py  new_train.py  options.py  recon.py  reconstruct.py  reconstruct_asdf.py  run.sh  server.py  setup.py  setup.sh  test.py  train.py  train_aro.py  train_mash.py
3rd/MarchingCubeCpp/: MC.h
aro_net/Config/: config.py
aro_net/Cpp/: main.cpp
aro_net/Dataset/: aro.py  mash.py  single_shape.py
aro_net/Demo/: aro_trainer.py  convertor.py  detector.py  eval_lfd.py  eval_metrics.py  feature.py  flask_server.py  gen_anc.py  generator_3d.py  gradio_server.py  hit_dist_calculator.py  mash_trainer.py  norm_and_sample_mesh.py  server.py  trainer.py
aro_net/Lib/: common.py
aro_net/Method/: anchor.py  feature.py  mesh.py  raycast.py  sample.py  trans.py
aro_net/Metric/: chamfer.py  eval.py  hausdoff.py  iou.py  lfd.py
aro_net/Model/: aro.py  aro_export.py  mash.py  positional_encoding_1d.py
aro_net/Module/: convertor.py  detector.py  flask_server.py  generator_3d.py  gradio_server.py  hit_dist_calculator.py  server.py  trainer.py
aro_net/Test/: align.py  dataset.py
data/anchors/: anc_48.npy
include/: detector.h  grid.h  mc_io.h  transform.h
src/: asdf_dataset.py  datasets.py  detector.cpp  grid.cpp  io.cpp  main.cpp  mc_io.cpp  models.py  new_models.py  transform.cpp
(+25 files in other folders)
